# safe-rm

./: .gitignore  .release.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
ci/: before_deploy.sh
src/: app.rs  main.rs  util.rs
