[package]
authors = ["alongwyforever@gmail.com","mail@nivekuil.com"]
categories = ["command-line-utilities"]
description = "safe-rm: a safe and ergonomic alternative to rm"
keywords = ["rm"]
license = "GPL-3.0+"
name = "safe-rm"
readme = "./README.md"
repository = "https://github.com/alongwy/safe-rm"

edition = '2018'
version = "0.1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

autobins = false

[dependencies]
clap = "2"
walkdir = "2"
time = "0.1"
error-chain = "0.12"

[profile.release]
opt-level = "s"

[[bin]]
name = "safe-rm"
path = "src/main.rs"